--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.10.0</version>
+		</dependency>
 	</dependencies>
 </project>
