--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <native.maven.plugin.version>0.9.23</native.maven.plugin.version>
         <junit.jupiter.version>5.9.3</junit.jupiter.version>
-        <maven.compiler.source>${java.specification.version}</maven.compiler.source>
-        <maven.compiler.target>${java.specification.version}</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>20</maven.compiler.target>
         <imageName>djsonata</imageName>
-        <mainClass>com.dashjoin.jsonata.Main</mainClass>
+        <mainClass>com.dashjoin.jsonata.Bench</mainClass>
     </properties>
 
     <dependencies>
@@ -25,11 +25,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.2</version>
+            <scope>test</scope>
         </dependency>
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>1.3.2</version>
+            <scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
