--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
 			<version>1.10.0</version>
+            <scope>test</scope>
 		</dependency>
     </dependencies>
 
