--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,5 @@ jobs:
       run: |
         mvn package -DskipTests -Dmaven.javadoc.skip=true
         mvn compile exec:java -Dexec.classpathScope=test -Dexec.mainClass=com.dashjoin.jsonata.Generate
+        mvn package -DskipTests -Dmaven.javadoc.skip=true
         mvn test
-  
