--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dashjoin</groupId>
     <artifactId>jsonata</artifactId>
+    <version>0.9.4</version>
 
     <parent>
 	    <groupId>com.dashjoin</groupId>
