--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	    <groupId>com.dashjoin</groupId>
 	    <artifactId>jsonata-parent</artifactId>
         <relativePath>pom</relativePath>
-        <version>0.9.3</version>
+        <version>0.9.2024-10</version>
     </parent>
 
 </project>
